@@ -1,3 +1,10 @@
+Sun Jan 23 23:50:38 GMT 2011  Colin Watson  <cjwatson@debian.org>
+
+	* Makefile.am (EXTRA_DIST): Remove gnulib/m4/sockpfaf.m4, which was
+	  removed along with the internal copy of libpipeline.
+	* man/po4a/Makefile.am (EXTRA_DIST): Add Locale/Po4a/Manext.pm.
+	  (PO4A_ENVIRONMENT): Set PERL5LIB to $(srcdir), not `pwd`.
+
 Sun Jan 23 17:01:51 GMT 2011  Colin Watson  <cjwatson@debian.org>
 
 	* man/man1/apropos.man1 (OPTIONS), man/man1/lexgrog.man1 (OPTIONS),
